[package]
name = "tiberius-0-9-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["compat"] }
# this works!
tiberius = { version = "0.9", default-features = false, features = ["chrono", "tokio", "rustls"] }

# this doesn't work on Mac
# tiberius = { version = "0.9", features = ["chrono", "tokio"] }

